# bangkok-node

./: .gitignore  Anchor.toml  README.md  init-community.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
app/: .env.local  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
app/.next/: trace
app/.next/server/: server-reference-manifest.json  webpack-runtime.js
app/.next/server/app/: page.js  page_client-reference-manifest.js
app/.next/server/vendor-chunks/: @swc.js  next.js
app/.next/static/chunks/: app-pages-internals.js  webpack.js
app/.next/static/webpack/: webpack.a29845a6b3eecdf8.hot-update.js
app/.next/types/app/: layout.ts  page.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/checkin/: page.tsx
app/src/app/credentials/: page.tsx
app/src/app/events/: page.tsx
app/src/components/: Footer.tsx  LandingPage.jsx  Nav.tsx  PageBackground.tsx  Particles.tsx  StatBox.tsx  StrataDashboard.jsx  WalletProvider.tsx
app/src/hooks/: useCounter.ts
app/src/idl/: strata.json
app/src/styles/: checkinStyles.ts  credentialStyles.ts  homeStyles.ts  leaderboardStyles.ts  marketplaceStyles.ts  organizerStyles.ts  profileStyles.ts  walletProfileStyles.ts
app/src/utils/: scoring.ts  strata-client.ts
copilot/: package.json  strata-copilot.ts
programs/strata/: Cargo.toml
programs/strata/src/: credentials.rs  lib.rs  marketplace.rs
scripts/: 1-deploy.sh  2-setup-community.sh  compute-disc.ps1  generate-idl.js  setup-community.ts  sync-to-wsl.sh
tests/: strata.ts
(+40 files in other folders)
