[package]
name = "strata"
version = "0.1.0"
description = "Strata - On-chain Coordination OS for Builder Communities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "strata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
proc-macro2 = "=1.0.85"
